Adding auto update db

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "AccountContext": "Server=DESKTOP-9PRDEUT;Database=MyDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AccountContext": "Server=.\\SQLEXPRESS;Database=MyDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
